--- a/securecoding/src/main/resources/static/bootstrap/css/styles.css
+++ b/securecoding/src/main/resources/static/bootstrap/css/styles.css
@@ -384,9 +384,63 @@ select:disabled {
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
+.filebox .upload-name {
+    display: inline-block;
+    height: 40px;
+    padding: 0 10px;
+    vertical-align: middle;
+    border: 1px solid #dddddd;
+    width: 78%;
+    color: #999999;
+}
+
+.filebox label {
+    display: inline-block;
+    padding: 10px 20px;
+    color: #fff;
+    vertical-align: middle;
+    background-color: #999999;
+    cursor: pointer;
+    height: 40px;
+    margin-left: 10px;
+}
+
+.filebox input[type="file"] {
+    position: absolute;
+    width: 0;
+    height: 0;
+    padding: 0;
+    overflow: hidden;
+    border: 0;
+}
+
+.file input[type="file"] {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    clip: rect(0,0,0,0)
+    overflow: hidden;
+    border: 0;
+}
+
 .area {
     width: 100%;
     height: 35em;
+    resize: none;
+    font-size: 1rem;
+    font-weight: 400;
+    border-radius: 0.25rem;
+    border: 1px solid #fcfafa;
+    background-color: #fcfafa;
+}
+
+.board-area {
+    width: 100%;
+    height: 200px;
+    margin-bottom: 2%;
+    border-color: #D8D8D8;
+    background-color: #FFF
     resize: none;
     font-size: 1rem;
     font-weight: 400;
