--- a/securecoding/src/main/resources/templates/fragments/nav.html
+++ b/securecoding/src/main/resources/templates/fragments/nav.html
@@ -3,7 +3,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light" style="height: 15%">
     <div class="container px-4 px-lg-5" style="height: 15%">
-      <a class="navbar-brand" style="font-weight: 500; font-size: 30px" href="/">JAVA</a>
+      <a class="navbar-brand" style="font-weight: 500; font-size: 28px" href="/">JAVA</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
@@ -24,8 +24,8 @@
               <li><a class="dropdown-item" th:href="@{/1/12}">12. 서버사이드 요청 위조</a></li>
               <li><a class="dropdown-item" th:href="@{/1/13}">13. HTTP 응답분할</a></li>
               <li><a class="dropdown-item" th:href="@{/1/14}">14. 정수형 오버플로우</a></li>
-              <li><a class="dropdown-item" href="#!">15. 보안기능 결정에 사용되는 부적절한 입력값</a></li>
-              <li><a class="dropdown-item" href="#!">16. 메모리 버퍼 오버플로우</a></li>
+              <li><a class="dropdown-item" th:href="@{/1/15}">15. 보안기능 결정에 사용되는 부적절한 입력값</a></li>
+              <li><a class="dropdown-item" th:href="@{/1/16}">16. 메모리 버퍼 오버플로우</a></li>
               <li><a class="dropdown-item" th:href="@{/1/17}">17. 포맷 스트링 삽입</a></li>
             </ul>
           </li>
