--- a/securecoding/src/main/resources/templates/1/1.15.code.html
+++ b/securecoding/src/main/resources/templates/1/1.15.code.html
@@ -25,44 +25,52 @@
                             <input type="radio" name="css-tabs" id="tab-1" checked class="tab-switch">
                             <label for="tab-1" class="tab-label">deleteMemberForm.html</label>
                             <div class="tab-content">
-                                <code class="code-area" style="height: 15em"><textarea wrap="off" disabled class="area" style="height: 15em">@PostMapping("/2/5/vuln")
-public String CreateMemberForm_vuln(@Valid MemberForm form, BindingResult result, Model model) {
-
-        if (result.hasErrors()) {
-            model.addAttribute("message", "유효하지 않은 정보입니다.");
-            model.addAttribute("searchUrl", "/2/5");
-
-            return "message";
-        }
-
-        Member member = new Member();
-
-        member.setName(form.getName());
-        member.setUsername(form.getUsername());
-
-        if(!memberService.passwordValidate(form.getPassword())) {
-
-            model.addAttribute("message", "최소 8자 이상, 영어 대·소문자, 숫자, 특수문자가 혼용되어야 합니다.");
-            model.addAttribute("searchUrl", "/member/signup");
-
-            return "message";
-        } else {
-            member.setPassword(form.getPassword());
-
-            memberService.join(member);
-
-            model.addAttribute("message", "회원가입이 완료되었습니다.");
-            model.addAttribute("searchUrl", "/member/login");
-
-            return "message";
-        }
-    }
-}</textarea></code>
+                                <pre><code class="code-area" style="height: 15em"><textarea wrap="off" disabled class="area" style="height: 15em">...
+<input type="hidden" th:name="id" th:value="${id}" />
+<label th:for="name">이름</label>
+<label th:for="username">아이디</label>
+<button type="submit" class="btn">탈퇴</button>
+....</textarea></code></pre>
                             </div>
                         </div>
                         <div class="tab">
                             <input type="radio" name="css-tabs" id="tab-2" class="tab-switch">
                             <label for="tab-2" class="tab-label">MemberController.java</label>
+                            <div class="tab-content">
+                                <code class="code-area" style="height: 15em"><textarea disabled wrap="off" class="area" style="height: 15em">@Controller
+@RequiredArgsConstructor
+public class MemberController{
+
+    private final MemberService memberService;
+
+    @PostMapping("/mypage/delete/{memberId}/vuln")
+    public String deleteMemberForm_vuln(@PathVariable("memberId") Long memberId, HttpServletRequest request,
+                                    HttpSession session, Model model) {
+
+        String id = request.getParameter("id");
+
+        if (id == null) {
+            return "/1/1.15";
+        }
+
+        Long memberid = Long.parseLong(id);
+
+        memberService.deleteMember(memberid);
+
+        request.getSession().removeAttribute("memberInfo");
+        session.invalidate();
+
+        model.addAttribute("message", "정말 탈퇴하시겠습니까?");
+        model.addAttribute("searchUrl", "/");
+
+        return "message";
+    }
+}</textarea></code>
+                            </div>
+                        </div>
+                        <div class="tab">
+                            <input type="radio" name="css-tabs" id="tab-3" class="tab-switch">
+                            <label for="tab-3" class="tab-label">MemberService.java</label>
                             <div class="tab-content">
                                 <code class="code-area" style="height: 15em"><textarea disabled wrap="off" class="area" style="height: 15em">@Service
 @Transactional
@@ -71,32 +79,11 @@ public class MemberService {
 
     private final MemberRepository memberRepository;
 
-    public Long join(Member member) {
-
-        if(validateDuplicateMember(member.getUsername())) {
-            throw new NotJoinException("중복된 아이디입니다.");
-        } else {
-            memberRepository.save(member);
-
-            return member.getId();
-        }
+    /* 회원 탈퇴 */
+    @Transactional
+    public void deleteMember(Long memberId) {
+        memberRepository.deleteById(memberId);
     }
-
-    private boolean validateDuplicateMember(String username) {
-        return memberRepository.existsByUsername(username);
-    }
-    ...
-}</textarea></code>
-                            </div>
-                        </div>
-                        <div class="tab">
-                            <input type="radio" name="css-tabs" id="tab-3" class="tab-switch">
-                            <label for="tab-3" class="tab-label">MemberService.java</label>
-                            <div class="tab-content">
-                                <code class="code-area" style="height: 15em"><textarea disabled wrap="off" class="area" style="height: 15em">public interface MemberRepository extends JpaRepository<Member, Long> {
-
-  boolean existsByUsername(String username);
-
 }</textarea></code>
                             </div>
                         </div>
@@ -117,37 +104,31 @@ public class MemberService {
                           <input type="radio" name="css-tabs" id="tab-4" checked class="tab-switch">
                           <label for="tab-4" class="tab-label">MemberController.java</label>
                           <div class="tab-content">
-                              <code class="code-area" style="height: 15em"><textarea disabled wrap="off" class="area" style="height: 15em">@PostMapping("/2/5/secure")
-    public String CreateMemberForm_secure(@Valid MemberForm2 form, BindingResult result, Model model) {
+                              <code class="code-area" style="height: 15em"><textarea disabled wrap="off" class="area" style="height: 15em">@Controller
+@RequiredArgsConstructor
+public class MemberController{
 
-        if (result.hasErrors()) {
-            model.addAttribute("message", "유효하지 않은 정보입니다.");
-            model.addAttribute("searchUrl", "/2/5");
+    private final MemberService memberService;
 
-            return "message";
-        }
+    @PostMapping("/mypage/delete/{memberId}/secure")
+    public String deleteMemberForm_secure(@PathVariable("memberId") Long memberId, HttpServletRequest request,
+                                  HttpSession session, Model model) {
 
-        Member member = new Member();
+        MemberInfo member = (MemberInfo) request.getSession().getAttribute("memberInfo");
 
-        member.setName(form.getName());
-        member.setUsername(form.getUsername());
+        memberService.validateUpdate(member.getId(), memberId);
 
-        if(memberService.passwordValidate(form.getPassword())) {
+        memberService.deleteMember(memberId);
 
-            member.setPassword(memberService.HashPassword(form.getPassword()));
-            memberService.join(member);
+        request.getSession().removeAttribute("memberInfo");
+        session.invalidate();
 
-            model.addAttribute("message", "회원가입이 완료되었습니다.");
-            model.addAttribute("searchUrl", "/member/login");
+        model.addAttribute("message", "정말 탈퇴하시겠습니까?");
+        model.addAttribute("searchUrl", "/");
 
-            return "message";
-        } else {
-            model.addAttribute("message", "최소 8자 이상, 영어 대·소문자, 숫자, 특수문자가 혼용되어야 합니다.");
-            model.addAttribute("searchUrl", "/member/signup");
-
-            return "message";
-        }
-    }</textarea></code>
+        return "message";
+    }
+}</textarea></code>
                           </div>
                       </div>
                       <div class="tab">
@@ -161,21 +142,11 @@ public class MemberService {
 
     private final MemberRepository memberRepository;
 
-    public Long join(Member member) {
-
-        if(validateDuplicateMember(member.getUsername())) {
-            throw new NotJoinException("중복된 아이디입니다.");
-        } else {
-            memberRepository.save(member);
-
-            return member.getId();
-        }
+    /* 회원 탈퇴 */
+    @Transactional
+    public void deleteMember(Long memberId) {
+        memberRepository.deleteById(memberId);
     }
-
-    private boolean validateDuplicateMember(String username) {
-        return memberRepository.existsByUsername(username);
-    }
-    ....
 }</textarea></code>
                           </div>
                       </div>
