--- a/securecoding/src/main/resources/templates/fragments/nav.html
+++ b/securecoding/src/main/resources/templates/fragments/nav.html
@@ -15,25 +15,25 @@
               <li><a class="dropdown-item" th:href="@{/1/3}">3. 경로 조작 및 자원 삽입</a></li>
               <li><a class="dropdown-item" th:href="@{/1/4}">4. 크로스사이트 스크립트</a></li>
               <li><a class="dropdown-item" th:href="@{/1/5}">5. 운영체제 명령어 삽입</a></li>
-              <li><a class="dropdown-item" th:href="@{/1/6}">6. 위험한 형식 파일 업로드</a></li>
+              <li><a class="dropdown-item" th:if="${session.memberInfo != null}" th:href="@{/1/6}">6. 위험한 형식 파일 업로드</a></li>
               <li><a class="dropdown-item" th:href="@{/1/7}">7. 신뢰되지 않는 URL 주소로 자동접속 연결</a></li>
               <li><a class="dropdown-item" th:href="@{/1/8}">8. 부적절한 XML 외부개체 참조</a></li>
               <li><a class="dropdown-item" th:href="@{/1/9}">9. XML 삽입</a></li>
               <li><a class="dropdown-item" th:href="@{/1/10}">10. LDAP 삽입</a></li>
-              <li><a class="dropdown-item" href="#!">11. 크로스사이트 요청 위조</a></li>
+              <li><a class="dropdown-item" th:if="${session.memberInfo != null}" href="#!">11. 크로스사이트 요청 위조</a></li>
               <li><a class="dropdown-item" th:href="@{/1/12}">12. 서버사이드 요청 위조</a></li>
               <li><a class="dropdown-item" th:href="@{/1/13}">13. HTTP 응답분할</a></li>
               <li><a class="dropdown-item" th:href="@{/1/14}">14. 정수형 오버플로우</a></li>
-              <li><a class="dropdown-item" th:href="@{/1/15}">15. 보안기능 결정에 사용되는 부적절한 입력값</a></li>
+              <li><a class="dropdown-item" th:if="${session.memberInfo != null}" th:href="@{/mypage/delete/{memberId} (memberId=${session.memberInfo.id})}">15. 보안기능 결정에 사용되는 부적절한 입력값</a></li>
               <li><a class="dropdown-item" th:href="@{/1/16}">16. 메모리 버퍼 오버플로우</a></li>
               <li><a class="dropdown-item" th:href="@{/1/17}">17. 포맷 스트링 삽입</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" id="navbarDropdown3" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">제2절 보안기능</a>
+            <a class="nav-link dropdown-toggle" id="navbarDropdown3" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" >제2절 보안기능</a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" th:href="@{/2/1}">1. 적절한 인증 없는 중요기능 허용</a></li>
-              <li><a class="dropdown-item" href="#!">2. 부적절한 인가</a></li>
+              <li><a class="dropdown-item" th:if="${session.memberInfo != null}" th:href="@{/mypage/info/{memberId} (memberId=${session.memberInfo.id})}">1. 적절한 인증 없는 중요기능 허용</a></li>
+              <li><a class="dropdown-item" th:if="${session.memberInfo != null}" href="#!">2. 부적절한 인가</a></li>
               <li><a class="dropdown-item" th:href="@{/2/3}">3. 중요한 자원에 대한 잘못된 권한 설정</a></li>
               <li><a class="dropdown-item" th:href="@{/2/4}">4. 취약한 암호화 알고리즘 사용</a></li>
               <li><a class="dropdown-item" th:href="@{/2/5}">5. 암호화되지 않은 중요정보</a></li>
