--- a/securecoding/src/main/resources/templates/1/1.6.html
+++ b/securecoding/src/main/resources/templates/1/1.6.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
+<script type="text/javascript" th:src="@{/js/cssandjs/action.js}"></script>
 <!-- Head -->
 <head th:replace="fragments/head :: head"></head>
 <body>
@@ -14,40 +15,54 @@
     <p style="text-align: center">제1절 입력데이터 검증 및 표현</p>
     <br />
     <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-      <div class="col mb-5" style="width: 40%; height: 200%">
+        <!-- Vulnerable code -->
+        <div class="col mb-5" style="width: 40%; height: 200%">
         <h4 class="fw-bolder" style="text-align: center">Vulnerable</h4>
         <hr />
-        <form action="/1/6/vuln" id="vulnerable6" method="post" th:object="${form}" enctype="multipart/form-data">
-          <label for="file" class="form-control" style="width: 80%; margin-right: 4%; height: 50px; float: left;">
-            <div style="margin-top: 2%; text-align: left">파일 선택</div>
-            <input type="file" id="file" name="file" style="display: none" />
-          </label>
-          <button type="submit" class="btn" style="background-color: #ffe74a; width: 16%; height: 50px">업로드</button>
+        <form action="/1/6/vuln" method="post" th:object="${form}" enctype="multipart/form-data">
+          <div class="form-group">
+            <label th:for="subject" style="margin-bottom: 2%; color: #2E2E2E;">제목</label>
+            <input type="text" th:field="*{subject}" class="form-control" style="margin-bottom: 2%; height: 45px" />
+          </div>
+          <div class="form-group">
+            <label th:for="content" style="margin-top: 3%; margin-bottom: 2%; color: #2E2E2E">내용</label>
+            <textarea th:field="*{content}" class="area" style="height: 250px; margin-bottom: 2%; border-color: #D8D8D8; background-color: #FFF"/>
+          </div>
+          <div class="filebox">
+            <input class="upload-name" value="첨부파일" placeholder="첨부파일" style="margin-bottom: 2%">
+            <label th:for="fileName" style="margin-bottom: 2%; color: #2E2E2E">파일 찾기</label><br />
+            <input id="fileName" type="file" style="margin-bottom: 2%; float: left"/>
+          </div>
+          <button type="submit" class="btn" style="background-color: #ffe74a; width: 100%; height: 50px">등록</button>
           <br />
           <br />
           <div class="card h-100">
-            <!-- Vulnerable code -->
           </div>
         </form>
       </div>
-      <div class="col mb-5" style="width: 40%; height: 200%">
+        <!-- Secure code -->
+        <div class="col mb-5" style="width: 40%; height: 200%">
         <h4 class="fw-bolder" style="text-align: center">Secure</h4>
         <hr />
-        <form action="/1/6/secure" id="secure6" method="post" th:object="${form}" enctype="multipart/form-data">
-          <label for="file" class="form-control" style="width: 80%; margin-right: 4%; height: 50px; float: left;">
-            <div style="margin-top: 2%; text-align: left">파일 선택</div>
-            <input type="file" id="file2" name="file2" style="display: none" />
-          </label>
-<!--          <label for="file" class="form-control" style="width: 80%; margin-right: 4%; height: 50px; float: left;">-->
-<!--            <div style="margin-top: 2%; text-align: left">파일 선택</div>-->
-<!--          </label>-->
-<!--          <input type="file" id="file2" name="file2"  />-->
-          <button type="submit" class="btn" style="background-color: #ffe74a; width: 16%; height: 50px">업로드</button>
-          <br />
-          <br />
-          <div class="card h-100">
-            <!-- Secure Code -->
-          </div>
+        <form action="/1/6/secure" method="post" th:object="${form}" enctype="multipart/form-data">
+            <div class="form-group">
+                <label th:for="subject" style="margin-bottom: 2%; color: #2E2E2E">제목</label>
+                <input type="text" th:field="*{subject}" class="form-control" style="margin-bottom: 2%; height: 45px" />
+            </div>
+            <div class="form-group">
+                <label th:for="content" style="margin-top: 3%; margin-bottom: 2%; color: #2E2E2E">내용</label>
+                <textarea th:field="*{content}" class="area" style="height: 250px; margin-bottom: 2%; border-color: #D8D8D8; background-color: #FFF"/>
+            </div>
+            <div class="filebox">
+                <input class="upload-name" value="첨부파일" placeholder="첨부파일" style="margin-bottom: 2%;">
+                <label th:for="fileName2" style="margin-bottom: 2%; color: #2E2E2E">파일 찾기</label><br />
+                <input id="fileName2" type="file" style="margin-bottom: 2%; float: left;"/>
+            </div>
+            <button type="submit" class="btn" style="background-color: #ffe74a; width: 100%; height: 50px">등록</button>
+            <br />
+            <br />
+            <div class="card h-100">
+            </div>
         </form>
       </div>
     </div>
