--- a/securecoding/src/main/resources/static/bootstrap/css/styles.css
+++ b/securecoding/src/main/resources/static/bootstrap/css/styles.css
@@ -385,24 +385,25 @@ select:disabled {
 }
 
 .filebox .upload-name {
-    display: inline-block;
-    height: 40px;
+    height: 45px;
     padding: 0 10px;
     vertical-align: middle;
     border: 1px solid #dddddd;
+    border-radius: 0.25rem;
     width: 78%;
     color: #999999;
 }
 
 .filebox label {
-    display: inline-block;
-    padding: 10px 20px;
-    color: #fff;
+    height: 45px;
+    width: 20%;
+    margin-top: 2%;
     vertical-align: middle;
+    text-align: center;
     background-color: #999999;
+    border-radius: 0.25rem;
     cursor: pointer;
-    height: 40px;
-    margin-left: 10px;
+    margin-left: 5px;
 }
 
 .filebox input[type="file"] {
@@ -414,33 +415,9 @@ select:disabled {
     border: 0;
 }
 
-.file input[type="file"] {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    clip: rect(0,0,0,0)
-    overflow: hidden;
-    border: 0;
-}
-
 .area {
     width: 100%;
-    height: 35em;
-    resize: none;
-    font-size: 1rem;
-    font-weight: 400;
-    border-radius: 0.25rem;
-    border: 1px solid #fcfafa;
-    background-color: #fcfafa;
-}
-
-.board-area {
-    width: 100%;
-    height: 200px;
-    margin-bottom: 2%;
-    border-color: #D8D8D8;
-    background-color: #FFF
+    height: 20em;
     resize: none;
     font-size: 1rem;
     font-weight: 400;
@@ -3945,7 +3922,7 @@ textarea.form-control-lg {
   width: 100%;
   padding: 0.25rem 1rem;
   clear: both;
-  font-weight: 400;
+  font-weight: 500;
   color: #212529;
   text-align: inherit;
   text-decoration: none;
