--- a/securecoding/src/main/resources/templates/1/1.6.html
+++ b/securecoding/src/main/resources/templates/1/1.6.html
@@ -30,8 +30,8 @@
           </div>
           <div class="filebox">
             <input class="upload-name" value="첨부파일" placeholder="첨부파일" style="margin-bottom: 2%">
-            <label th:for="fileName" style="margin-bottom: 2%; color: #2E2E2E">파일 찾기</label><br />
-            <input id="fileName" type="file" style="margin-bottom: 2%; float: left"/>
+            <label th:for="fileName" style="margin-bottom: 2%; color: #2E2E2E; text-align: center;">파일 찾기</label><br />
+            <input id="fileName" type="file" style="margin-bottom: 2%; margin-top: 2%; float: left"/>
           </div>
           <button type="submit" class="btn" style="background-color: #ffe74a; width: 100%; height: 50px">등록</button>
           <br />
