--- a/securecoding/src/main/resources/templates/2/2.15.html
+++ b/securecoding/src/main/resources/templates/2/2.15.html
@@ -10,8 +10,8 @@
 <!-- Section-->
 <section class="py-5">
   <div class="container px-4 px-lg-5 mt-5">
-    <h4 class="fw-bolder" style="text-align: center">10. LDAP 삽입</h4>
-    <p style="text-align: center">제1절 입력데이터 검증 및 표현</p>
+    <h4 class="fw-bolder" style="text-align: center">15. 무결성 검사 없는 코드 다운로드</h4>
+    <p style="text-align: center">제2절 보안기능</p>
     <br />
     <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
         <!-- Vulnerable code -->
@@ -23,7 +23,7 @@
                     <div class="tabs">
                         <div class="tab">
                             <input type="radio" name="css-tabs" id="tab-1" checked class="tab-switch">
-                            <label for="tab-1" class="tab-label">LDAPInjection.java</label>
+                            <label for="tab-1" class="tab-label">AuthorityController.java</label>
                             <div class="tab-content">
                                 <code class="code-area" style="height: 15em"><textarea wrap="off" disabled class="area" style="height: 15em">private void searchRecord(String userSN, String userPassword) throws NamingException {
    Hashtable<String, String> env = new Hashtable<String, String>();
@@ -68,7 +68,7 @@
                   <div class="tabs">
                       <div class="tab">
                           <input type="radio" name="css-tabs" id="tab-2" checked class="tab-switch">
-                          <label for="tab-2" class="tab-label">LDAPInjection.java</label>
+                          <label for="tab-2" class="tab-label">AuthorityController.java</label>
                           <div class="tab-content">
                               <code class="code-area" style="height: 15em"><textarea disabled wrap="off" class="area" style="height: 15em">private void searchRecord(String userSN, String userPassword) throws NamingException {
    Hashtable<String, String> env = new Hashtable<String, String>();
